Fix scrollbars in acco and horizons

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,48 +1,3 @@
-* {
-    -webkit-overflow-scrolling: touch;
-    -webkit-tap-highlight-color: transparent;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-body, html {
-	overflow: hidden;
-}
-
-::-webkit-scrollbar { width: 3px; }
-::-webkit-scrollbar-track { background: transparent; }
-::-webkit-scrollbar-thumb { background: white; border-radius: 1.5px; }
-
-[sidebarjs] {
-	z-index: 100 !important;
-}
-
-.h-middle {
-	position: absolute;
-	left: 50%;
-    transform: translateX(-50%);
-}
-
-.v-middle {
-	position: absolute;
-	top: 50%;
-    transform: translateY(-50%);
-}
-
-.vh-middle {
-	position: absolute;
-	top: 50%; left: 50%;
-    transform: translate(-50%, -50%);
-  	-ms-transform: translate(-50%, -50%);
-}
-
-.bld {
-	font-weight: 900;
-}
-
 .mi-top-right-buttons {
 	font-size: 0.8em;
 	position: fixed;
